[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncbi-client"
version = "0.1.0"
description = "Python client for NCBI Datasets API and E-utilities"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ncbi_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
