[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncbi-client"
version = "0.1.0"
description = "Python client for NCBI Datasets API and E-utilities"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.6",
]
s3 = [
    "boto3>=1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ncbi_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 132
target-version = "py310"
extend-exclude = ["explore.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
